--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Ana Carolina Marinho 3C
                     <div class="card-body">
                         <h5 class="card-title">FlashCard</h5>
                         <p class="card-text">Flashcards são cartões de estudo que facilitam a memorização por meio da repetição ativa e do aprendizado interativo.</p>
-                        <a href="https://www.seusite.com" target="_blank" class="btn btn-primary bounce">Saiba mais</a>
+                        <a href="https://2ccanarinho03.github.io/flashcards/" target="_blank" class="btn btn-primary bounce">Saiba mais</a>
                     </div>
                 </div>
             </div>
